--- a/age_gender_cnn.ipynb
+++ b/age_gender_cnn.ipynb
@@ -31,7 +31,7 @@
       "version": "2.1.0"
     },
     "colab": {
-      "name": "testagegender (9).ipynb",
+      "name": "age-gender-cnn.ipynb",
       "provenance": []
     }
   },
@@ -1861,6 +1861,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "C_Q488LBq9ay"
+      },
+      "source": [
+        "#save model\r\n",
+        "model.save('gender.h5')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "execution": {
           "iopub.execute_input": "2021-01-26T03:21:23.717089Z",
           "iopub.status.busy": "2021-01-26T03:21:23.715678Z",
@@ -2822,6 +2834,18 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s_LYRTdbrRov"
+      },
+      "source": [
+        "#save model\r\n",
+        "model.save('age.h5')"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
